Fix labs overflow-x

--- a/labs/style.css
+++ b/labs/style.css
@@ -23,6 +23,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 .grid {
